--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,10 @@
-/*# sourceMappingURL=main.css.map */
+@font-face {
+  font-family: "Gibson";
+  font-weight: 400;
+  src: url("../fonts/Gibson-Regular.otf");
+}
+@font-face {
+  font-family: "Gibson";
+  font-weight: 600;
+  src: url("../fonts/Gibson-SemiBold.otf");
+}/*# sourceMappingURL=main.css.map */
