--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,4 @@
-@import "base/fonts";
-@import "base/base";
-@import "base/variables";
-@import "base/mixins";
+@import "../sass/base/fonts";
+@import "../sass/base/base";
+@import "../sass/base/variables";
+@import "../sass/base/mixins";
