--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,8 @@
+// base
 @import "../sass/base/fonts";
-@import "../sass/base/base";
 @import "../sass/base/variables";
 @import "../sass/base/mixins";
+@import "../sass/base/base";
+@import "../sass/base/typography";
+
+@import "../sass/layout/grid";
