--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,20 +9,30 @@
   src: url("../fonts/Gibson-SemiBold.otf");
 }
 :root {
-  --font-family-gibson: "Gibson",
-  --font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+  --font-family-gibson: "Gibson";
+  --font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --black: #000000;
-  --black-100: #18181B;
-  --black-200: #02050E;
+  --black-100: #02050e;
+  --black-200: #18181b;
+  --black-300: #1e1e1e;
   --white: #ffffff;
-  --gray-100: #F4F4F5;
-  --gray-200: #E4E4E7;
-  --dark-gray: #71717A;
-  --dark-blue: #081A44;
-  --red: #C5000C;
-  --default-color: var(--black-200);
+  --gray: #fafafa;
+  --gray-100: #f4f4f5;
+  --gray-200: #e4e4e7;
+  --gray-300: #252525;
+  --dark-gray: #71717a;
+  --dark-blue: #081a44;
+  --red: #c5000c;
+  --default-color: var(--black-100);
+  --default-bg-color: var(--white);
+  --default-header-color: var(--black-200);
   --gutter-x: 32px;
   --gutter-y: 0;
+  --default-border-radius: 8px;
+  --default-border-color: var(--gray-200);
+  --default-padding: 16px;
+  --default-padding-x: 16px;
+  --default-padding-y: 16px;
 }
 
 *,
@@ -37,34 +47,55 @@ body {
   color: var(--black-200);
 }
 
+.main-container {
+  background-color: var(--gray);
+  box-shadow: 0 0 0 100vmax var(--gray);
+  -webkit-clip-path: inset(0 -100vmax);
+          clip-path: inset(0 -100vmax);
+  padding-block: 20px 24px;
+}
+@media (min-width: 768px) {
+  .main-container {
+    padding-block: 40px;
+  }
+}
+
+img {
+  display: block;
+}
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-weight: 600;
+  color: var(--default-header-color);
+}
+
 .h1 {
   font-size: 32px;
-  font-weight: 600;
 }
 
 .h2 {
   font-size: 24px;
-  font-weight: 600;
 }
 
 .h3 {
   font-size: 20px;
-  font-weight: 600;
 }
 
 .h4 {
   font-size: 16px;
-  font-weight: 600;
 }
 
 .h5 {
   font-size: 14px;
-  font-weight: 600;
 }
 
 .h6 {
   font-size: 12px;
-  font-weight: 600;
 }
 
 strong {
@@ -124,108 +155,569 @@ strong {
 
 .g-3,
 .gx-3 {
-  --gutter-x: 1.25rem;
+  --gutter-x: 1rem;
 }
 
 .g-3,
 .gy-3 {
-  --gutter-y: 1.25rem;
+  --gutter-y: 1rem;
 }
 
 .g-4,
 .gx-4 {
-  --gutter-x: 1.5rem;
+  --gutter-x: 1.25rem;
 }
 
 .g-4,
 .gy-4 {
-  --gutter-y: 1.5rem;
+  --gutter-y: 1.25rem;
 }
 
 .g-5,
 .gx-5 {
-  --gutter-x: 3rem;
+  --gutter-x: 1.5rem;
 }
 
 .g-5,
 .gy-5 {
+  --gutter-y: 1.5rem;
+}
+
+.g-6,
+.gx-6 {
+  --gutter-x: 3rem;
+}
+
+.g-6,
+.gy-6 {
   --gutter-y: 3rem;
 }
 
 .gap-0 {
-  gap: 0 !important;
+  gap: 0;
 }
 
 .gap-1 {
-  gap: 0.25rem !important;
+  gap: 0.25rem;
 }
 
 .gap-2 {
-  gap: 0.5rem !important;
+  gap: 0.5rem;
 }
 
 .gap-3 {
-  gap: 1.25rem !important;
+  gap: 1rem;
 }
 
 .gap-4 {
-  gap: 1.5rem !important;
+  gap: 1.25rem;
 }
 
 .gap-5 {
-  gap: 3rem !important;
+  gap: 1.5rem;
+}
+
+.gap-6 {
+  gap: 3rem;
 }
 
 .row-gap-0 {
-  row-gap: 0 !important;
+  row-gap: 0;
 }
 
 .row-gap-1 {
-  row-gap: 0.25rem !important;
+  row-gap: 0.25rem;
 }
 
 .row-gap-2 {
-  row-gap: 0.5rem !important;
+  row-gap: 0.5rem;
 }
 
 .row-gap-3 {
-  row-gap: 1.25rem !important;
+  row-gap: 1rem;
 }
 
 .row-gap-4 {
-  row-gap: 1.5rem !important;
+  row-gap: 1.25rem;
 }
 
 .row-gap-5 {
-  row-gap: 3rem !important;
+  row-gap: 1.5rem;
+}
+
+.row-gap-6 {
+  row-gap: 3rem;
 }
 
 .column-gap-0 {
-  -moz-column-gap: 0 !important;
-       column-gap: 0 !important;
+  -moz-column-gap: 0;
+       column-gap: 0;
 }
 
 .column-gap-1 {
-  -moz-column-gap: 0.25rem !important;
-       column-gap: 0.25rem !important;
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
 }
 
 .column-gap-2 {
-  -moz-column-gap: 0.5rem !important;
-       column-gap: 0.5rem !important;
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
 .column-gap-3 {
-  -moz-column-gap: 1.25rem !important;
-       column-gap: 1.25rem !important;
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 
 .column-gap-4 {
-  -moz-column-gap: 1.5rem !important;
-       column-gap: 1.5rem !important;
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
 }
 
 .column-gap-5 {
-  -moz-column-gap: 3rem !important;
-       column-gap: 3rem !important;
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
+.column-gap-6 {
+  -moz-column-gap: 3rem;
+       column-gap: 3rem;
+}
+
+.p-0 {
+  padding: 0;
+}
+
+.px-0 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.py-0 {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.p-3 {
+  padding: 1rem;
+}
+
+.px-3 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.py-3 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.p-4 {
+  padding: 1.25rem;
+}
+
+.px-4 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-4 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.p-5 {
+  padding: 1.5rem;
+}
+
+.px-5 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-5 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.p-6 {
+  padding: 3rem;
+}
+
+.px-6 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.py-6 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.m-0 {
+  padding: 0;
+}
+
+.mx-0 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.my-0 {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
+.m-1 {
+  padding: 0.25rem;
+}
+
+.mx-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.my-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+.m-2 {
+  padding: 0.5rem;
+}
+
+.mx-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.my-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.m-3 {
+  padding: 1rem;
+}
+
+.mx-3 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.my-3 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.m-4 {
+  padding: 1.25rem;
+}
+
+.mx-4 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.my-4 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.m-5 {
+  padding: 1.5rem;
+}
+
+.mx-5 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.my-5 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.m-6 {
+  padding: 3rem;
+}
+
+.mx-6 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.my-6 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.header {
+  border-bottom: 2px solid var(--black-300);
+  padding-block: 19px;
+}
+@media (min-width: 768px) {
+  .header {
+    padding-block: 38px;
+  }
+}
+
+.footer {
+  border-top: 2px solid var(--black-300);
+  padding-block: 20px;
+  color: var(--dark-gray);
+}
+@media (min-width: 768px) {
+  .footer {
+    padding-block: 32px 24px;
+  }
+}
+.footer img {
+  margin-bottom: 20px;
+}
+.footer small {
+  display: inline-block;
+  max-width: 220px;
+}
+.footer h5 {
+  margin-bottom: 12px;
+}
+.footer ul {
+  margin-bottom: 0;
+  display: grid;
+  row-gap: 8px;
+}
+.footer a {
+  color: inherit;
+}
+
+.card {
+  border: 1px solid var(--default-border-color);
+  border-radius: var(--default-border-radius);
+  height: 100%;
+}
+
+.card-body {
+  padding: var(--default-padding);
+}
+
+.alert {
+  padding: var(--default-padding);
+  border: 1px solid var(--default-border-color);
+  border-radius: var(--default-border-radius);
+  background-color: var(--default-bg-color);
+}
+.alert .close {
+  width: 57px;
+  height: 48px;
+  opacity: 1;
+  stroke: var(--dark-gray);
+}
+.alert .close .icon {
+  width: 100%;
+  height: 100%;
+}
+
+.btn {
+  font-weight: 600;
+  padding: 8px 16px;
+  font-size: 14px;
+  border-radius: var(--default-border-radius);
+  transition: all 0.15s ease-in-out;
+}
+.btn:hover {
+  opacity: 0.9;
+}
+.btn:active {
+  transform: scale(0.97);
+}
+
+.btn-black {
+  background-color: var(--black);
+  border-color: var(--black);
+  color: var(--white);
+}
+.btn-black:hover {
+  background-color: var(--black);
+  border-color: var(--black);
+  color: var(--white);
+}
+
+.btn-black-100 {
+  background-color: var(--black-100);
+  border-color: var(--black-100);
+  color: var(--white);
+}
+.btn-black-100:hover {
+  background-color: var(--black-100);
+  border-color: var(--black-100);
+  color: var(--white);
+}
+
+.btn-black-200 {
+  background-color: var(--black-200);
+  border-color: var(--black-200);
+  color: var(--white);
+}
+.btn-black-200:hover {
+  background-color: var(--black-200);
+  border-color: var(--black-200);
+  color: var(--white);
+}
+
+.btn-black-300 {
+  background-color: var(--black-300);
+  border-color: var(--black-300);
+  color: var(--white);
+}
+.btn-black-300:hover {
+  background-color: var(--black-300);
+  border-color: var(--black-300);
+  color: var(--white);
+}
+
+.btn-white {
+  background-color: var(--white);
+  border-color: var(--white);
+  color: var(--white);
+}
+.btn-white:hover {
+  background-color: var(--white);
+  border-color: var(--white);
+  color: var(--white);
+}
+
+.btn-gray {
+  background-color: var(--gray);
+  border-color: var(--gray);
+  color: var(--white);
+}
+.btn-gray:hover {
+  background-color: var(--gray);
+  border-color: var(--gray);
+  color: var(--white);
+}
+
+.btn-gray-100 {
+  background-color: var(--gray-100);
+  border-color: var(--gray-100);
+  color: var(--white);
+}
+.btn-gray-100:hover {
+  background-color: var(--gray-100);
+  border-color: var(--gray-100);
+  color: var(--white);
+}
+
+.btn-gray-200 {
+  background-color: var(--gray-200);
+  border-color: var(--gray-200);
+  color: var(--white);
+}
+.btn-gray-200:hover {
+  background-color: var(--gray-200);
+  border-color: var(--gray-200);
+  color: var(--white);
+}
+
+.btn-gray-300 {
+  background-color: var(--gray-300);
+  border-color: var(--gray-300);
+  color: var(--white);
+}
+.btn-gray-300:hover {
+  background-color: var(--gray-300);
+  border-color: var(--gray-300);
+  color: var(--white);
+}
+
+.btn-dark-gray {
+  background-color: var(--dark-gray);
+  border-color: var(--dark-gray);
+  color: var(--white);
+}
+.btn-dark-gray:hover {
+  background-color: var(--dark-gray);
+  border-color: var(--dark-gray);
+  color: var(--white);
+}
+
+.btn-dark-blue {
+  background-color: var(--dark-blue);
+  border-color: var(--dark-blue);
+  color: var(--white);
+}
+.btn-dark-blue:hover {
+  background-color: var(--dark-blue);
+  border-color: var(--dark-blue);
+  color: var(--white);
+}
+
+.btn-red {
+  background-color: var(--red);
+  border-color: var(--red);
+  color: var(--white);
+}
+.btn-red:hover {
+  background-color: var(--red);
+  border-color: var(--red);
+  color: var(--white);
+}
+
+.account-overview h1 {
+  margin-bottom: 16px;
+  font-size: 24px;
+}
+@media (min-width: 768px) {
+  .account-overview h1 {
+    margin-bottom: 24px;
+    font-size: 32px;
+  }
+}
+.account-overview .card .card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.account-overview .card p {
+  margin-bottom: 24px;
+}
+.account-overview .card em {
+  font-style: normal;
+  text-decoration: underline;
+  font-weight: 600;
+}
+.account-overview .card .btn {
+  margin-top: auto;
+}
+.account-overview .alert {
+  margin-block: 16px 0;
 }/*# sourceMappingURL=main.css.map */
