--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -1,22 +1,3 @@
-:root { 
-    --font-family-gibson: "Gibson",
-    --font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
-    --black: #000000;
-    --black-100: #18181B;
-    --black-200: #02050E;
-    --white: #ffffff;
-    --gray-100: #F4F4F5;
-    --gray-200: #E4E4E7;
-    --dark-gray: #71717A;
-    --dark-blue: #081A44;
-    --red: #C5000C;
-
-    --default-color: var(--black-200);
-    --gutter-x: 32px;
-    --gutter-y: 0;
-
-}
-
 *, 
 *::before, 
 *::after {
@@ -26,5 +7,21 @@
 
 body {
     font-family: var(--font-family-gibson), var(--font-family-sans-serif);
-    color: var(--black-200);
+    color: var(--black-200);    
+}
+
+.main-container {
+    background-color: var(--gray);
+    box-shadow: 0 0 0 100vmax var(--gray);
+    clip-path: inset(0 -100vmax);
+
+    padding-block: 20px 24px;
+
+    @include media('md') {
+        padding-block: 40px;
+    }
+}
+
+img {
+    display: block;
 }
