--- a/assets/sass/base/_mixins.scss
+++ b/assets/sass/base/_mixins.scss
@@ -1,11 +1,8 @@
-$gutters: (
-  0: 0,
-  1: 0.25rem,
-  2: 0.5rem,
-  3: 1.25rem,
-  4: 1.5rem,
-  5: 3rem,
-);
+@mixin media($size) {
+  @media (min-width: map-get($breakpoints, $size)) {
+    @content;
+  }
+}
 
 @mixin generate-gutters($prefix, $property) {
   @each $index, $value in $gutters {
@@ -24,7 +21,41 @@ $gutters: (
 @mixin generate-gaps($type, $property) {
   @each $index, $value in $gutters {
     .#{$type}-#{$index} {
-      #{$property}: #{$value} !important;
+      #{$property}: #{$value};
     }
+  }
+}
+
+@mixin generate-spacer($prefix) {
+  @each $index, $value in $gutters {
+    .#{$prefix}-#{$index} {
+      padding: #{$value};
+    }
+
+    .#{$prefix}x-#{$index} {
+      padding-left: #{$value};
+      padding-right: #{$value};
+    }
+
+    .#{$prefix}y-#{$index} {
+      padding-top: #{$value};
+      padding-bottom: #{$value};
+    }
+  }
+}
+
+@function shade-color($color, $weight) {
+  @return mix(black, $color, $weight);
+}
+
+@mixin button-variant($color, $value) {
+  background-color: $value;
+  border-color: $value;
+  color: var(--white);
+
+  &:hover {
+    background-color: $value;
+    border-color: $value;
+    color: var(--white);  
   }
 }
