--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,31 +1,35 @@
-.h1 {
-    font-size: 32px;
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
     font-weight: 600;
+    color: var(--default-header-color);
+}
+
+.h1 {
+    font-size: 32px;    
 }
 
 .h2 {
-    font-size: 24px;
-    font-weight: 600;
+    font-size: 24px;    
 }
 
 .h3 {
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 20px;    
 }
 
 .h4 {
-    font-size: 16px;
-    font-weight: 600;
+    font-size: 16px;    
 }
 
 .h5 {
-    font-size: 14px;
-    font-weight: 600;
+    font-size: 14px;    
 }
 
 .h6 {
-    font-size: 12px;
-    font-weight: 600;
+    font-size: 12px;    
 }
 
 strong {
