--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -14,7 +14,7 @@
     --dark-blue: #081a44;
     --red: #c5000c;
 
-    --default-color: var(--black-100);    
+    --default-color: var(--dark-gray);
     --default-bg-color: var(--white);    
     --default-header-color: var(--black-200);
     
