--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,6 +9,7 @@
 @import "../sass/layout/grid";
 @import "../sass/layout/header";
 @import "../sass/layout/footer";
+@import "../sass/layout/sidebar";
 
 // components
 @import "../sass/components/card";
