--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -1,7 +1,7 @@
 .card {
     border: 1px solid var(--default-border-color);    
     border-radius: var(--default-border-radius);
-    height: 100%;    
+    color: var(--black-100);
 }
 
 .card-body {
