--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -27,6 +27,8 @@
     --default-padding: 16px;
     --default-padding-x: 16px;
     --default-padding-y: 16px;
+
+    --container-width: 1232px;
 }
 
 $breakpoints: (
