--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,13 +2,14 @@
 @import "../sass/base/fonts";
 @import "../sass/base/variables";
 @import "../sass/base/mixins";
-@import "../sass/base/base";
+@import "../sass/base/global";
 @import "../sass/base/typography";
 
 // layout
 @import "../sass/layout/grid";
 @import "../sass/layout/header";
 @import "../sass/layout/footer";
+@import "../sass/layout/main";
 @import "../sass/layout/sidebar";
 
 // components
