--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -16,6 +16,7 @@
 @import "../sass/components/card";
 @import "../sass/components/alert";
 @import "../sass/components/buttons";
+@import "../sass/components/badge";
 
 // pages
 @import "../sass/pages/account_overview";
