--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -549,35 +549,6 @@ strong {
   border: 1px solid var(--default-border-color);
   border-radius: var(--default-border-radius);
   padding: var(--default-padding);
-  height: 100%;
-}
-.sidebar .btn, .sidebar .nav-link {
-  display: flex;
-  gap: 8px;
-  align-items: center;
-}
-.sidebar .collapse-toggler {
-  font-size: 16px;
-  width: 100%;
-  text-align: left;
-  margin-bottom: 16px;
-  justify-content: space-between;
-}
-.sidebar .collapse-toggler[aria-expanded=true] .chevron-down {
-  transform: rotateX(-180deg);
-}
-@media (min-width: 768px) {
-  .sidebar .collapse-toggler {
-    display: none;
-  }
-}
-.sidebar .bars-solid,
-.sidebar .chevron-down {
-  width: 24px;
-  height: 24px;
-}
-.sidebar .chevron-down {
-  margin-left: auto;
 }
 @media (min-width: 768px) {
   .sidebar .collapse:not(.show) {
@@ -586,64 +557,77 @@ strong {
 }
 .sidebar .nav {
   flex-direction: column;
+  gap: 4px;
 }
-.sidebar .nav .nav-link {
-  border-radius: var(--default-border-radius);
-  color: inherit;
-  cursor: pointer;
-  transition: all 0.15s ease-in-out;
-  padding: 12px 16px;
+.sidebar .chevron-down {
+  margin-left: auto;
 }
-.sidebar .nav .nav-link .icon {
-  fill: var(--default-color);
-  transition: all 0.15s ease-in-out;
+.sidebar [aria-expanded=true] .chevron-down {
+  transform: rotateX(180deg);
 }
-.sidebar .nav .nav-link:hover {
-  background-color: var(--gray-200);
-  color: var(--black-200);
-  padding-left: 20px;
-}
-.sidebar .nav .nav-link:hover use:first-child {
-  display: none;
-}
-.sidebar .nav .nav-link:hover use:last-child {
-  display: block;
-}
-.sidebar .nav .nav-link:hover .icon {
-  fill: var(--black-200);
-}
-.sidebar .nav .nav-link use:first-child {
-  display: block;
-}
-.sidebar .nav .nav-link use:last-child {
-  display: none;
-}
-.sidebar .nav .active .nav-link {
-  background-color: var(--gray-200);
-  color: var(--black-200);
-  pointer-events: none;
-}
-.sidebar .nav .active .nav-link use:first-child {
-  display: none;
-}
-.sidebar .nav .active .nav-link use:last-child {
-  display: block;
-}
-.sidebar .nav .active .nav-link .icon {
-  fill: var(--black-200);
-}
+.sidebar .collapse-toggler,
+.sidebar .nav-link,
 .sidebar #btnSignout {
   display: flex;
-  gap: 8px;
   font-weight: 400;
-  text-align: left;
-  font-size: inherit;
+  color: inherit;
+  font-size: 16px;
+  width: 100%;
+  gap: 8px;
+  align-items: center;
+  height: 48px;
+  border-radius: var(--default-border-radius);
+}
+.sidebar .collapse-toggler .icon,
+.sidebar .nav-link .icon,
+.sidebar #btnSignout .icon {
+  fill: var(--dark-gray);
+  width: 24px;
+  height: 24px;
+}
+.sidebar .collapse-toggler use,
+.sidebar .nav-link use,
+.sidebar #btnSignout use {
+  opacity: 0;
+}
+.sidebar .collapse-toggler use:first-child,
+.sidebar .nav-link use:first-child,
+.sidebar #btnSignout use:first-child {
+  opacity: 1;
+}
+.sidebar .collapse-toggler {
+  color: var(--black-200);
+  margin-bottom: 8px;
+}
+@media (min-width: 768px) {
+  .sidebar .collapse-toggler {
+    display: none;
+  }
+}
+.sidebar .collapse-toggler .icon {
+  fill: var(--black-200);
+}
+.sidebar .active .nav-link, .sidebar .nav-link:hover {
+  background-color: var(--gray-100);
+  border-color: var(--gray-100);
+  color: var(--black-200);
+}
+.sidebar .active .nav-link .icon, .sidebar .nav-link:hover .icon {
+  fill: var(--black-200);
+}
+.sidebar .active .nav-link use:first-child, .sidebar .nav-link:hover use:first-child {
+  opacity: 0;
+}
+.sidebar .active .nav-link use:last-child, .sidebar .nav-link:hover use:last-child {
+  opacity: 1;
+}
+.sidebar #btnSignout {
   color: var(--red);
   text-decoration: none;
-  padding: 12px 16px;
 }
 .sidebar #btnSignout:hover {
-  background-color: var(--gray-200);
+  background-color: var(--gray-100);
+  border-color: var(--gray-100);
 }
 .sidebar #btnSignout .icon {
   fill: var(--red);
@@ -820,6 +804,72 @@ strong {
   color: var(--white);
   background-color: var(--red);
   border-color: var(--red);
+}
+
+.badge {
+  font-weight: 400;
+  font-size: 12px;
+  border-radius: 50%;
+}
+
+.badge-black {
+  color: var(--white);
+  background-color: var(--black);
+}
+
+.badge-black-100 {
+  color: var(--white);
+  background-color: var(--black-100);
+}
+
+.badge-black-200 {
+  color: var(--white);
+  background-color: var(--black-200);
+}
+
+.badge-black-300 {
+  color: var(--white);
+  background-color: var(--black-300);
+}
+
+.badge-white {
+  color: var(--white);
+  background-color: var(--white);
+}
+
+.badge-gray {
+  color: var(--white);
+  background-color: var(--gray);
+}
+
+.badge-gray-100 {
+  color: var(--white);
+  background-color: var(--gray-100);
+}
+
+.badge-gray-200 {
+  color: var(--white);
+  background-color: var(--gray-200);
+}
+
+.badge-gray-300 {
+  color: var(--white);
+  background-color: var(--gray-300);
+}
+
+.badge-dark-gray {
+  color: var(--white);
+  background-color: var(--dark-gray);
+}
+
+.badge-dark-blue {
+  color: var(--white);
+  background-color: var(--dark-blue);
+}
+
+.badge-red {
+  color: var(--white);
+  background-color: var(--red);
 }
 
 .account-overview h1 {
