--- a/assets/sass/layout/_sidebar.scss
+++ b/assets/sass/layout/_sidebar.scss
@@ -10,125 +10,101 @@
     border: 1px solid var(--default-border-color);
     border-radius: var(--default-border-radius);
     padding: var(--default-padding);
-    height: 100%;
-
-    .btn, .nav-link {
-        display: flex;
-        gap: 8px;
-        align-items: center;        
-    }    
-
-    .collapse-toggler {
-        font-size: 16px;
-        width: 100%;
-        text-align: left;
-        margin-bottom: 16px;
-        justify-content: space-between;
-
-        &[aria-expanded="true"] {
-            .chevron-down {
-                transform: rotateX(-180deg);
-            }
-        }
-
-        @include media('md') {
-            display: none;
-        }
-    }
-
-    .bars-solid,
-    .chevron-down {
-        width: 24px;
-        height: 24px;
-    }
-
-    .chevron-down {
-        margin-left: auto;
-    }
 
     .collapse:not(.show) {
         @include media('md') {
             display: block;
         }
-    }    
+    }
 
     .nav {
         flex-direction: column;
+        gap: 4px;
+    }
+    .chevron-down {
+        margin-left: auto;
+    }
 
-        .nav-link {
-            border-radius: var(--default-border-radius);
-            color: inherit;
-            cursor: pointer;
-            transition: all .15s ease-in-out;
-            padding: 12px 16px;
+    [aria-expanded="true"] .chevron-down {
+        transform: rotateX(180deg);
+    }
 
-            .icon {
-                fill: var(--default-color);
-                transition: all .15s ease-in-out;
+    .collapse-toggler,
+    .nav-link,
+    #btnSignout {
+        display: flex;
+        font-weight: 400;
+        color: inherit;
+        font-size: 16px;
+        width: 100%;
+        gap: 8px;
+        align-items: center;
+        height: 48px;
+        border-radius: var(--default-border-radius);
 
-            }
-
-            &:hover {
-                background-color: var(--gray-200);
-                color: var(--black-200);        
-                padding-left: 20px;
-                
-                use {
-                    &:first-child {
-                        display: none;
-                    }
-                    &:last-child {
-                        display: block;
-                    }
-                }
-                
-                .icon {
-                    fill: var(--black-200);
-                }                
-            }
-
-            use {
-                &:first-child {
-                    display: block;
-                }
-                &:last-child {
-                    display: none;
-                }
-            }
+        .icon {
+            fill: var(--dark-gray);
+            width: 24px;
+            height: 24px;
         }
 
-        .active .nav-link {
-            background-color: var(--gray-200);
-            color: var(--black-200);
-            pointer-events: none;
+        use {
+            opacity: 0;
+        }
 
-            use {
-                &:first-child {
-                    display: none;
-                }
-                &:last-child {
-                    display: block;
-                }
-            }            
+        use:first-child {
+            opacity: 1;
+        }
+    }
 
-            .icon {
-                fill: var(--black-200);
-            }                            
+    .collapse-toggler {
+        color: var(--black-200);
+        margin-bottom: 8px;
+
+        @include media('md') {
+            display: none;
+        }
+
+        .icon {
+            fill: var(--black-200);
         }        
     }
 
+    %active-state {
+        background-color: var(--gray-100);
+        border-color: var(--gray-100);
+        color: var(--black-200);
+
+        .icon {
+            fill: var(--black-200);
+        }        
+
+        use:first-child {
+            opacity: 0;
+        }
+
+        use:last-child {
+            opacity: 1;
+        }            
+    }
+
+    .nav-link {
+        &:hover {
+            @extend %active-state;
+        }
+    }
+
+    .active .nav-link {
+        @extend %active-state;
+    }
+
     #btnSignout {
-        display: flex;
-        gap: 8px;
-        font-weight: 400;
-        text-align: left;
-        font-size: inherit;
         color: var(--red);
         text-decoration: none;
-        padding: 12px 16px;
 
         &:hover {
-            background-color: var(--gray-200);
+            background-color: var(--gray-100);
+            border-color: var(--gray-100);
         }
 
         .icon {
