--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,17 +65,6 @@ img {
   display: block;
 }
 
-[data-toggle=tooltip] {
-  display: inline-block;
-  vertical-align: text-bottom;
-  cursor: pointer;
-}
-[data-toggle=tooltip] .icon {
-  width: 12px;
-  height: 12px;
-  vertical-align: middle;
-}
-
 .h1,
 .h2,
 .h3,
@@ -114,6 +103,71 @@ strong {
   font-weight: 600;
 }
 
+.preloader-container {
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--white);
+  z-index: 1080;
+  display: grid;
+  place-content: center;
+}
+.preloader-container .preloader {
+  width: 300px;
+  height: 40px;
+  transform: scale(1.1);
+}
+.preloader-container .preloader::before {
+  content: "";
+  background: url("../images/ad_arrow_logo.svg") no-repeat center;
+  width: 39px;
+  height: 39px;
+  position: absolute;
+  top: 50%;
+  animation: arrow 1.5s alternate 2 forwards;
+}
+.preloader-container img {
+  width: 100%;
+  animation: text 1.5s alternate 2 forwards;
+}
+
+@keyframes text {
+  0% {
+    -webkit-clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+            clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+  }
+  25% {
+    -webkit-clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+            clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+  }
+  50% {
+    -webkit-clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+            clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+  }
+  75% {
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+            clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+  }
+}
+@keyframes arrow {
+  0%, 25% {
+    transform: translate(-50%, -50%) scale(0);
+    left: 50%;
+  }
+  25%, 50% {
+    transform: translate(-50%, -50%) scale(1);
+    left: 50%;
+  }
+  50%, 75% {
+    transform: translate(0%, -50%) scale(1);
+    left: 0%;
+  }
+  75%, 100% {
+    transform: translate(0%, -50%) scale(1);
+    left: 100%;
+  }
+}
 .container-fluid {
   max-width: var(--container-width);
 }
@@ -550,6 +604,13 @@ strong {
   border-radius: var(--default-border-radius);
   padding: var(--default-padding);
 }
+.sidebar h2 {
+  margin-bottom: 0;
+}
+.sidebar p {
+  font-size: 14px;
+  margin-bottom: 24px;
+}
 @media (min-width: 768px) {
   .sidebar .collapse:not(.show) {
     display: block;
@@ -577,6 +638,7 @@ strong {
   align-items: center;
   height: 48px;
   border-radius: var(--default-border-radius);
+  transition: all 0.15s;
 }
 .sidebar .collapse-toggler .icon,
 .sidebar .nav-link .icon,
@@ -589,11 +651,17 @@ strong {
 .sidebar .nav-link use,
 .sidebar #btnSignout use {
   opacity: 0;
+  transition: all 0.15s;
 }
 .sidebar .collapse-toggler use:first-child,
 .sidebar .nav-link use:first-child,
 .sidebar #btnSignout use:first-child {
   opacity: 1;
+}
+.sidebar .collapse-toggler:hover,
+.sidebar .nav-link:hover,
+.sidebar #btnSignout:hover {
+  gap: 12px;
 }
 .sidebar .collapse-toggler {
   color: var(--black-200);
@@ -621,6 +689,9 @@ strong {
 .sidebar .active .nav-link use:last-child, .sidebar .nav-link:hover use:last-child {
   opacity: 1;
 }
+.sidebar .active .nav-link {
+  pointer-events: none;
+}
 .sidebar #btnSignout {
   color: var(--red);
   text-decoration: none;
@@ -631,6 +702,9 @@ strong {
 }
 .sidebar #btnSignout .icon {
   fill: var(--red);
+}
+.sidebar .badge {
+  margin-left: auto;
 }
 
 .card {
@@ -810,6 +884,10 @@ strong {
   font-weight: 400;
   font-size: 12px;
   border-radius: 50%;
+  min-width: 20px;
+  min-height: 20px;
+  display: grid;
+  place-content: center;
 }
 
 .badge-black {
@@ -838,27 +916,27 @@ strong {
 }
 
 .badge-gray {
-  color: var(--white);
+  color: var(--black-200);
   background-color: var(--gray);
 }
 
 .badge-gray-100 {
-  color: var(--white);
+  color: var(--black-200);
   background-color: var(--gray-100);
 }
 
 .badge-gray-200 {
-  color: var(--white);
+  color: var(--black-200);
   background-color: var(--gray-200);
 }
 
 .badge-gray-300 {
-  color: var(--white);
+  color: var(--black-200);
   background-color: var(--gray-300);
 }
 
 .badge-dark-gray {
-  color: var(--white);
+  color: var(--black-200);
   background-color: var(--dark-gray);
 }
 
@@ -870,6 +948,70 @@ strong {
 .badge-red {
   color: var(--white);
   background-color: var(--red);
+}
+
+.tippy-box[data-animation=shift-away][data-state=hidden] {
+  opacity: 0;
+}
+
+.tippy-box[data-animation=shift-away][data-state=hidden][data-placement^=top] {
+  transform: translateY(10px);
+}
+
+.tippy-box[data-animation=shift-away][data-state=hidden][data-placement^=bottom] {
+  transform: translateY(-10px);
+}
+
+.tippy-box[data-animation=shift-away][data-state=hidden][data-placement^=left] {
+  transform: translateX(10px);
+}
+
+.tippy-box[data-animation=shift-away][data-state=hidden][data-placement^=right] {
+  transform: translateX(-10px);
+}
+
+.tippy-box {
+  font-size: 12px;
+}
+
+.tippy-content {
+  padding: 16px;
+}
+
+.tippy-box[data-theme~=white] {
+  filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.15));
+  background-color: var(--white);
+  color: inherit;
+}
+
+.tippy-box[data-theme~=white][data-placement^=top] > .tippy-arrow::before {
+  border-top-color: var(--white);
+}
+
+.tippy-box[data-theme~=white][data-placement^=bottom] > .tippy-arrow::before {
+  border-bottom-color: var(--white);
+}
+
+.tippy-box[data-theme~=white][data-placement^=left] > .tippy-arrow::before {
+  border-left-color: var(--white);
+}
+
+.tippy-box[data-theme~=white][data-placement^=right] > .tippy-arrow::before {
+  border-right-color: var(--white);
+}
+
+.tooltip-toggle {
+  cursor: pointer;
+  vertical-align: text-bottom;
+}
+.tooltip-toggle .icon {
+  fill: var(--default-color);
+  width: 12px;
+  height: 12px;
+}
+
+.tooltip-content {
+  display: none;
 }
 
 .account-overview h1 {
@@ -904,4 +1046,20 @@ strong {
 }
 .account-overview .alert {
   margin-block: 16px 0;
+}
+.account-overview .form-group {
+  margin-bottom: 0;
+}
+.account-overview .custom-control-label {
+  cursor: pointer;
+}
+.account-overview .custom-control-input:checked ~ .custom-control-label::before {
+  border-color: var(--dark-blue);
+  background-color: var(--dark-blue);
+}
+.account-overview .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
+  border-color: var(--dark-blue);
+}
+.account-overview .custom-control-input:focus ~ .custom-control-label::before {
+  box-shadow: 0 0 0 0.2rem rgba(8, 26, 68, 0.25);
 }/*# sourceMappingURL=style.css.map */
