--- a/assets/sass/components/_badge.scss
+++ b/assets/sass/components/_badge.scss
@@ -2,6 +2,10 @@
     font-weight: 400;
     font-size: 12px;
     border-radius: 50%;
+    min-width: 20px;
+    min-height: 20px;
+    display: grid;
+    place-content: center;    
 }
 
 @each $color, $value in $theme-colors {
