--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -6,6 +6,7 @@
 @import "../sass/base/typography";
 
 // layout
+@import "../sass/layout/preloader";
 @import "../sass/layout/grid";
 @import "../sass/layout/header";
 @import "../sass/layout/footer";
@@ -17,6 +18,7 @@
 @import "../sass/components/alert";
 @import "../sass/components/buttons";
 @import "../sass/components/badge";
+@import "../sass/components/tooltip";
 
 // pages
 @import "../sass/pages/account_overview";
