--- a/assets/sass/layout/_preloader.scss
+++ b/assets/sass/layout/_preloader.scss
@@ -21,14 +21,14 @@
             height: 39px;
             position: absolute;
             top: 50%;
-            animation: arrow 1.5s alternate 2 forwards; 
+            animation: arrow 1.8s alternate 2 forwards; 
         }
     }
 
     img {
         width: 100%;
-        animation: text 1.5s alternate 2 forwards;
-        // clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+        animation: text 1.8s alternate 2 forwards;
+        margin-left: -30px;
     }
 }
 
@@ -43,6 +43,7 @@
 
     50% {
         clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+        transform: translateX(30px);
     }
     
     75% {
@@ -68,6 +69,6 @@
 
     75%, 100% {
         transform: translate(0%, -50%) scale(1);
-        left: 100%;
+        left: calc(100% - 30px);
     }
 }
