--- a/assets/sass/layout/_preloader.scss
+++ b/assets/sass/layout/_preloader.scss
@@ -12,7 +12,7 @@
     .preloader {
         width: 300px;
         height: 40px;
-        transform: scale(1.1);
+        // transform: scale(1.1);
 
         &::before {
             content: '';
