--- a/assets/sass/layout/_preloader.scss
+++ b/assets/sass/layout/_preloader.scss
@@ -12,7 +12,10 @@
     .preloader {
         width: 300px;
         height: 40px;
-        // transform: scale(1.1);
+
+        @include media('md') {
+            transform: scale(1.1);
+        }
 
         &::before {
             content: '';
