--- a/assets/sass/layout/_preloader.scss
+++ b/assets/sass/layout/_preloader.scss
@@ -39,7 +39,7 @@
     .logo-container {
         width: 0;
         height: 40px;
-        overflow: hidden;
+        // overflow: hidden;
         position: absolute;
         left: 0;
         animation: text 1.8s alternate 2 forwards;
