--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,12 +124,13 @@ strong {
   height: 100%;
   overflow: hidden;
   position: absolute;
-  right: 0;
+  background-color: blue;
+  left: 0;
   animation: reveal 1s alternate infinite;
 }
 @keyframes reveal {
   0%, 50% {
-    width: 50%;
+    width: 0%;
   }
   100% {
     width: 100%;
@@ -140,7 +141,17 @@ strong {
   width: 260px;
   height: 40px;
   position: absolute;
-  right: 0;
+  left: 0;
+}
+.preloader-container #ad-arrow-logo {
+  background: url("../images/ad_arrow_logo.svg") no-repeat center;
+  width: 39px;
+  height: 39px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .container-fluid {
