--- a/assets/sass/layout/_preloader.scss
+++ b/assets/sass/layout/_preloader.scss
@@ -20,14 +20,14 @@
         height: 100%;
         overflow: hidden;
         position: absolute;
-        right: 0;
-
+        background-color: blue;
+        left: 0;
         animation: reveal 1s alternate infinite;
     }
 
     @keyframes reveal {
         0%, 50% {
-            width: 50%;
+            width: 0%;
         }
 
         100% {
@@ -41,6 +41,19 @@
         height: 40px;
 
         position: absolute;
-        right: 0;
+        left: 0;
+    }
+
+    #ad-arrow-logo {
+        background: url('../images/ad_arrow_logo.svg') no-repeat center;
+        width: 39px;
+        height: 39px;
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+        z-index: 1;
     }
 }
